:bug: various fixes - mobile spacings - remove xs backround - fix scroll

--- a/src/components/registerDelegate/registerDelegate.css
+++ b/src/components/registerDelegate/registerDelegate.css
@@ -52,6 +52,7 @@
 @media (--small-viewport) {
   .registerDelegate {
     padding: var(--register-delegate-vertical-padding-s) 0;
+    overflow-y: inherit;
   }
 
   .multiStep {
